--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -6,8 +6,10 @@
     "cra-template": "1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
